# adsc3910-project-group-5

./: .gitignore  CODE_OF_CONDUCT.md  Makefile  Meeting_Tracker.xlsx  README.md  data-description.ipynb  data-eda.ipynb  environment.yml
adsc3910-project-group-5/: README.md  environment.yml  pyproject.toml
adsc3910-project-group-5/docs/: CODE_OF_CONDUCT.md  Proposal.md  TEAMWORK_CONTRACT.md  credentials_mongodb.json  data-eda.ipynb
adsc3910-project-group-5/notebooks/: data_preprocessing.ipynb
data/: data-eda.ipynb
data/raw/: owid-co2-data-part-10.json
docs/: TEAMWORK_CONTRACT.md  data-description.ipynb  data-eda.ipynb
models/: mlflow_models.ipynb
notebooks/: analysis_co2_sources.ipynb  co2_emission_preprocessed.csv  data_analysis.ipynb  data_preprocessing.ipynb  eda.ipynb  regression_analysis.ipynb  time_series_analysis.ipynb
py_scripts/: data_preprocessing.py  eda.py  regression_analysis.py  time_series_analysis.py
tests/: data_preprocessing_tests.py  eda_tests.py  regression_analysis_tests.py  test_eda2.py  test_regression.py  test_time_series.py  time_series_analysis_tests.py
