[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "adsc_3910_group_5"
version = "0.0.1"
description = "Analysis of CO2 emissions"
authors = [
  { name = "Sayantika_Manisha_Alex_Precious" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["adsc_3910_group_5"]
force_sort_within_sections = true
